--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -34,42 +34,42 @@
             <li><button type="button" class="filter-btn">Дизайн</button></li>
             <li><button type="button" class="filter-btn">Маркетинг</button></li>
         </ul> 
-        <ul class="list">
+        <ul class="card-list list">
             <li><a><img src="./imajes/imj5.jpg" alt="монітор-з-фото" weight="370px">
-            <h3>Технокряк</h3>
-            <p>Веб-сайт</p></a>
+            <h2 class="title">Технокряк</h2>
+            <p class="text">Веб-сайт</p></a>
         </li>
             <li><a><img src="./imajes/imj6.jpg" alt="баскетболісти" weight="370px">
-            <h3>Постер New Orlean vs Golden Star</h3>
-            <p>Дизайн</p></a>
+            <h2 class="title">Постер New Orlean vs Golden Star</h2>
+            <p class="text">Дизайн</p></a>
         </li>
             <li><a><img src="./imajes/imj7.jpg" alt="лого-ресторана" weight="370px">
-            <h3>Ресторан Seafood</h3>
-            <p>Додаток</p></a>
+            <h2 class="title">Ресторан Seafood</h2>
+            <p class="text">Додаток</p></a>
         </li>
             <li><a><img src="./imajes/imj8.jpg" alt="навушники" weight="370px">
-            <h3>Проєкт Prime</h3>
-            <p>Маркетинг</p></a>
+            <h2 class="title">Проєкт Prime</h2>
+            <p class="text">Маркетинг</p></a>
         </li>
             <li><a><img src="./imajes/imj9.jpg" alt="два-бокси" weight="370px">
-            <h3>Проєкт Boxes</h3>
-            <p>Додаток</p></a>
+            <h2 class="title">Проєкт Boxes</h2>
+            <p class="text">Додаток</p></a>
         </li>
             <li><a><img src="./imajes/imj10.jpg" alt="монітор-з-навігацією" weight="370px">
-            <h3>Inspiration has no Borders</h3>
-            <p>Веб-сайт</p></a>
+            <h2 class="title">Inspiration has no Borders</h2>
+            <p class="text">Веб-сайт</p></a>
         </li>
             <li><a><img src="./imajes/imj11.jpg" alt="розгорнутий-буклет" weight="370px">
-            <h3>Видання Limited Edition</h3>
-            <p>Дизайн</p></a>
+            <h2 class="title">Видання Limited Edition</h2>
+            <p class="text">Дизайн</p></a>
         </li>
             <li><a><img src="./imajes/imj12.jpg" alt="бірка-на-мотузці" weight="370px">
-            <h3>Проєкт LAB</h3>
-            <p>Маркетинг</p></a>
+            <h2 class="title">Проєкт LAB</h2>
+            <p class="text">Маркетинг</p></a>
         </li>
             <li><a><img src="./imajes/imj13.jpg" alt="робота-на-ноуті" weight="370px">
-            <h3>Growing Business</h3>
-            <p>Додаток</p></a>
+            <h2 class="title">Growing Business</h2>
+            <p class="text">Додаток</p></a>
         </li>
         </ul>
 </section>
