--- a/portfolio.html
+++ b/portfolio.html
@@ -27,8 +27,9 @@
     </header>
     <main>
         <section>
-        <ul class="list">
-            <li><button type="button" class="filter-btn">Усі</button></li>
+            <h1 class="visually-hidden">Наша робота</h1>
+        <ul class="filter-list list">
+            <li><button type="button" class="filter-btn current">Усі</button></li>
             <li><button type="button" class="filter-btn">Веб-сайти</button></li>
             <li><button type="button" class="filter-btn">Додатки</button></li>
             <li><button type="button" class="filter-btn">Дизайн</button></li>
